Stylesheet/style.css
body {
  /*text-align: center;*/
  background-color: #415254;
  color: #38D5A0;
  font-family: 'PT Sans', sans-serif;
}

h1 {
  text-align: center;
  font-family: 'Roboto Mono', monospace;
  font-style: italic;
}

/*section {
 
}*/

.portfolio-text {
  text-align: center;
  max-width: 800px;
  margin: auto;
}

hr {
  max-width: 800px;
}

p {
  color: #38D5A0;
  font-family: 'PT Sans', sans-serif;
}

header, nav {
  display: flex;
  justify-content: right;
}

nav ul {
  font-size: x-large;
  font-family: 'Roboto Mono', monospace;
  font-weight: 700;
  color:#38D5A0;
  display: flex;
  }

nav li {
  display: inline;
  text-align: center;
  padding: 14px 16px;
}

.main {
  display: grid;
  max-width: 800px;
  margin: auto;
}

.information {
  grid-column: 1;
  grid-row: 2;
  border-radius: 10px;
}

.about-me {
  grid-column: 2;
  grid-row: 1;
}

.about-me-text {
  margin-top: 20px;
  font-size: 18px;
}

/* Fake images */
.fakeimg {
  background-color: #aaa;
  width: 400px;
  padding: 20px;
}

.fakeimg2 {
  background-color: #aaa;
  width: 100px;
}

/* Add a card effect for articles */
.card {
  background-color: white;
  padding: 20px;
  margin-top: 20px;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Portfolio */
.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.box {
  position: relative;
  width: 350px;
  height: 200px;
  margin: 10px;
}

.box img {
  display: block;
  width: 350px;
  height: 200px;
}

.box:hover .overlay {
  opacity: 0.7;
}

.overlay {
  position: absolute;
  display: block;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #38D5A0;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

a {
  text-decoration: none;
  /*font-weight: 700;*/
  color: rgb(56, 213, 160);
}

button {
  border-radius: 20px;
  border: 1px solid white;
  font-size: medium;
  color: #38D5A0;
  background-color: #415254;
  font-family: 'PT Sans', sans-serif;
  padding: 10px;
}

button:hover {
  color: white;
}

.footer {
  text-align: center;
  font-family: 'Roboto Mono', monospace;
  margin-top: auto;
}

/* Contact */

form {
  text-align: center;
  letter-spacing: 1px;
  margin: auto;
}

form label {
  font-weight: bold;
  font-family: 'Roboto Mono', monospace;
}

.formtext {
  font-family: 'PT Sans', sans-serif;
}

input {
  border-radius: 5px;
  padding: 5px;
  font-family: 'PT Sans', sans-serif;
  color: #38D5A0;
  border: 1px solid white;
  background-color: #415254;
}

textarea {
  border-radius: 7px;
  padding: 5px;
  font-family: 'PT Sans', sans-serif;
  border: 1px solid white;
  background-color: #415254;
  color: #38D5A0;
}

a:hover {
  color: white;
}

.active {
  color: white;
  text-decoration: underline;
}

button:hover {
  box-shadow: black;
  cursor: pointer;
}

/* Resume */

.resume {
  display: grid;
  grid-template-columns: 1fr 3fr;
  gap: 20px;
}

.experience {
  grid-column: 2;
  grid-row: 2;
  max-width: 600px;
  margin-left: 20px;
}

.education-interests {
  grid-column: 1;
  grid-row: 2;
  border-right: 1px solid white;
  padding-right: 30px;
  margin-left: 20px;
}

.resume-section {
  text-decoration: underline;
}

.resume-section, .sub-section {
  color: white;
}

@media only screen and (max-width: 1000px) {
  .main {
    display: flex;
    flex-direction: column;
  }
  .about-me, .information {
    width: 100%;
    padding: 0;
  }

  header {
    justify-content: center;
   }
  
  nav, nav ul {
    flex-direction: column;
    align-items: center;
    padding-right: 20px;
  }

  .container {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  form {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  input {
    margin: 20px;
  }

  .resume {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .education-interests {
    max-width: 800px;
    margin: auto;
    border-right: none;
  }
}

